✨ Controller와 Facade 연결
