# src/1-presentation/reservations/dto/enum/reservations.status.enum.ts
@@ -1,5 +1,0 @@
-export enum ReservationStatusEnum {
-  RESERVED = 'reserved',
-  EXPIRED = 'expired',
-  PAIED = 'paied',
-}
